Turn off rotate

--- a/InfiniTimeApp/app/src/main/AndroidManifest.xml
+++ b/InfiniTimeApp/app/src/main/AndroidManifest.xml
@@ -9,14 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".WatchActivity">
+        <activity
+            android:name=".WatchActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ScanActivity">
+        <activity
+            android:name=".ScanActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
