--- a/InfiniTimeApp/app/src/main/AndroidManifest.xml
+++ b/InfiniTimeApp/app/src/main/AndroidManifest.xml
@@ -22,8 +22,16 @@
             android:name=".ScanActivity"
             android:screenOrientation="portrait">
         </activity>
+        <service
+            android:name=".common.NotificationService"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" >
+            <intent-filter>
+                <action
+                    android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
     </application>
-
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
